--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- OpenGraph для соцсетей -->
     <meta property="og:title" content="OpenGen – Генерация AI-текстов">
     <meta property="og:description" content="Создавай уникальные AI-тексты легко и быстро. Попробуй OpenGen!">
-    <meta property="og:image" content="https://opengen.is-a.dev/preview.png">
-    <meta property="og:url" content="https://opengen.is-a.dev">
+    <meta property="og:image" content="/preview.png">
+    <meta property="og:url" content="https://bouquet2025.github.io/opengen-site/">
     <meta property="og:type" content="website">
     
     <!-- Стили -->
